Bug 162956 - Kopete Press File Transfer crash
Summary: Kopete Press File Transfer crash
Status: RESOLVED FIXED
Alias: None
Product: kopete
Classification: Applications
Component: ICQ and AIM Plugins (show other bugs)
Version: unspecified
Platform: Gentoo Packages Linux
: NOR crash
Target Milestone: ---
Assignee: Kopete Developers
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2008-05-31 20:59 UTC by Thomas K.
Modified: 2008-06-01 18:38 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed In:


Attachments
Crash fix (781 bytes, patch)
2008-06-01 15:57 UTC, Roman Jarosz
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas K. 2008-05-31 20:59:58 UTC
Version:           4.0.4 (using KDE 4.0.4)
Installed from:    Gentoo Packages
Compiler:          gcc 4.2.3/4 
OS:                Linux

Pressing on "Send File" will crash Kopete 4.0.4

Here the crash log: http://nopaste.de/p/aTLZgS0L7
Comment 1 Thomas K. 2008-05-31 21:27:29 UTC
Kopete Version 0.50.1

Debug:

kopete(4961)/kopete (oscar) OscarContact::sendFile: file: ' KUrl("") ' ' "" ' size  0
KCrash: Application 'kopete' crashing...
sock_file=/home/kuch3n/.kde/socket-Organic/kdeinit4__0
Comment 2 Roman Jarosz 2008-06-01 00:10:26 UTC
The only thing that can crash between the "OscarContact::sendFile" debug line and next one is KFileDialog so I suspect that the KFileDialog is crashing or your installation is somehow broken. Sadly the backtrace doesn't have any information. If you can reproduce the crash then please run kopete in gdb like this:
gdb --args kopete --nofork

and when it crashes go to console where you run the gdb and type "bt" and press enter. This should show backtrace.
Comment 3 Thomas K. 2008-06-01 12:19:20 UTC
I got this: http://nopaste.de/p/acCHOvpkw
Comment 4 Thomas K. 2008-06-01 14:10:31 UTC
I recompiled kdelibs and kopete to debug kopete:
http://nopaste.de/p/aGfqrES4y
Comment 5 Roman Jarosz 2008-06-01 15:57:58 UTC
Created attachment 25042 [details]
Crash fix

Hi can you apply this patch to kdelibs and recompile it. It should fix the
crash.
Comment 6 Thomas K. 2008-06-01 18:08:48 UTC
http://bugs.kde.org/show_bug.cgi?id=162956#c5
Comment 7 Roman Jarosz 2008-06-01 18:29:31 UTC
I assume that the fix helped as you close the bug. Next time please don't close a bug when the fix wasn't committed to SVN, the bug report will be closed automatically when it is committed.
Comment 8 Roman Jarosz 2008-06-01 18:36:15 UTC
SVN commit 815383 by rjarosz:

Can't use the itEnd iterator if we erase item from list, because the iterator is invalid.

BUG: 162956



 M  +2 -6      kprotocolcombo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=815383
Comment 9 Roman Jarosz 2008-06-01 18:38:06 UTC
SVN commit 815384 by rjarosz:

Backport commit 815383.
Can't use the itEnd iterator if we erase item from list, because the iterator is invalid.

CCBUG: 162956



 M  +2 -6      kprotocolcombo.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=815384