Can't use the itEnd iterator if we erase item from list, because the iterator is invalid.

BUG: 162956


svn path=/trunk/KDE/kdelibs/; revision=815383