kfile/kprotocolcombo.cpp
@@ -36,15 +36,11 @@ KProtocolCombo::KProtocolCombo(const QString& protocol, KUrlNavigator* parent)
 {
     qSort(m_protocols);
     QStringList::iterator it = m_protocols.begin();
-    QStringList::iterator itEnd = m_protocols.end();
     menu = new QMenu(this);
-    while (it != itEnd) {
+    while (it != m_protocols.end()) {
         const KUrl url(*it + "://");
         if (!KProtocolManager::supportsListing(url)) {
-            QStringList::iterator tempIt = it;
-            ++tempIt;
-            m_protocols.erase(it);
-            it = tempIt;
+            it = m_protocols.erase(it);
         } else {
             ++it;
         }
